[package]
name = "reel"
description = "Get information about films or series."
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "*", features = ["derive"]}
reqwest = {version = "*", features = ["json"]}
serde_json = {version = "*"}
colored = {version = "*"}
textwrap = {version = "*"}
tokio = {version = "*", features=["full"]}