[package]
name = "reel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde_json = { version = "1.0.145" }
serde = { version = "1.0.145" }
percent-encoding = { version = "2.3.2" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["full"] }
colored = { version = "3.0.0" }
comfy-table = { version = "7.2.1" }